# stock-tracker

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  Dockerfile  package.json
backend/include/stockc/: alpha_vantage.h  http.h  market_demo_data.h  market_history_json.h  market_metrics.h
backend/src/: .dockerignore  alpha_vantage.c  app.js  main.c
backend/src/cache/: history_cache.c  history_cache.h
backend/src/controllers/: market_controller.c  stocksController.js
backend/src/http/: cors.c  responses.c
backend/src/routes/: stocks.js
backend/src/services/: alphaVantageService.js  market_service.h
c-service/: CMakeLists.txt
c-service/include/stockc/: http_client.h  market.h  market_history_json.h
c-service/src/: alpha_vantage.c  http_client.c  http_server.c  main.c
c-service/src/cache/: history_cache.c  history_cache.h
c-service/src/controllers/: market_controller.c  market_controller.h
c-service/src/http/: cors.h  responses.h
c-service/src/routes/: market.c
c-service/src/services/: market_demo_data.c  market_history_json.c  market_metrics.c  market_service.c  market_service.h
frontend/: .env.production  index.html  package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: stockChart.jsx  stockQuote.jsx
frontend/src/services/: stockApi.js
frontend/src/styles/: stock.css
